# flaregram

./: README.md  pyproject.toml
src/flaregram/: __init__.py  __main__.py  cli.py  client.py  output.py
src/tgcli/: __init__.py  __main__.py  cli.py  models.py  output.py
src/tgtool/: __init__.py  __main__.py  cli.py  output.py
tests/: test_cli.py  test_client.py
