[project]
name = "flaregram"
version = "0.1.0"
description = "A minimal Telegram bot CLI for sending and reading messages"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Matthew D. Scholefield", email = "matthew331199@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]

[project.scripts]
flaregram = "flaregram.cli:app"

[project.urls]
Homepage = "https://github.com/MatthewScholefield/flaregram"
Repository = "https://github.com/MatthewScholefield/flaregram"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]
